Theming: login page (final)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -42,6 +42,8 @@ $footer-inverse-color-muted:    rgba(#fff, 0.5) !default;
 $footer-social-bg:              #aaa !default;
 $footer-social-color:           #fff !default;
 
+$login-box-bg:                  #fcfcfc !default;
+
 
 
 // Brand color variables
