--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_login.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_login.scss
@@ -1,11 +1,13 @@
+/// <reference path="_variables.scss" />
+/// <reference path="bs4/scss/bootstrap.scss" />
+
 //
 // Login & Registration Styles
 // --------------------------------------------------
 
-/* Login
-================================================ */
-
 .login-box {
+    background-color: $login-box-bg;
+
     hr {
 		width: 100%;
 		margin-top: 1.5rem;
@@ -20,96 +22,3 @@
 		line-height: inherit;
 	}
 }
-
-/*.login-wrapper {
-	position: relative;
-	overflow: hidden;
-	margin: 20px 0;
-    border-radius: 4px;
-	border: 1px solid #ddd;
-	background-color: #fafafa;
-}
-
-.login-block-register {
-	position: absolute;
-	padding: 0;
-	width: 50%;
-}
-
-.login-block-register .login-block-inner {
-	padding: 20px;
-}
-
-.login-block-login {	
-	position: relative;	
-	padding: 20px;
-	margin-left: 50%;
-	background-color: #fff;
-	border-radius: 0 3px 3px 0;
-	border-left: 1px solid #ccc;
-	box-shadow: 0 0 10px rgba(0,0,0, .2);
-		
-	.control-label {
-		width: 90px;
-		text-align: left;
-	}
-	
-	.controls {
-		margin-left: 100px;
-	}
-
-	.control-group.pwd {
-		margin-bottom: 10px;
-	}
-
-	.control-group.signin {
-		margin-bottom: 0;
-	}
-
-	.forgot-password {
-		margin-top: 4px;
-		font-size: 13px;
-	}
-
-	.captcha-box {
-		margin-top: 12px;
-		margin-bottom: 0;
-	}
-
-	.externalauthentication {
-		> * { margin-top: 10px }
-		> *:first-child { margin-top: 30px }
-	}
-
-	.login-credentials-bottom {
-		> * { margin-top: 10px }
-		> *:first-child { margin-top: 30px }
-	}
-}
-
-.btn-extauth {
-	text-align: left;
-	padding-left: 10px;
-}
-
-@media (max-width: 1200px) {
-	.login-block-login .signin .pull-right {
-		float: left;
-		margin-top: 8px;
-	}
-}*/
-
-
-/* Registration
-================================================ */
-
-/*.registration-page .buttons,
-.registration-result-page .buttons {
-	margin: 20px 0;
-	text-align: center;
-	padding-top: 20px;
-	border-top: 1px solid #ddd;
-	clear: both;
-}*/
-
-
