--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
@@ -309,9 +309,7 @@ $art-active-border-color:       rgba(0,0,0, 0.2);
         border: none;
         box-shadow: none;
         transition: none;
-        width: auto;
-        height: 2.75rem;
-        line-height: 2.75rem;
+        padding: 0.65rem 1rem;
 
         &.btn-secondary {
             color: #666;
