--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -80,8 +80,8 @@
 			
             <div class="select-button clearfix">
                 <a class="btn btn-secondary pull-left" href="@Url.Action("ShippingAddress")">
-                    <i class="fa fa-caret-left"></i>&nbsp;
-                    @T("Common.Back")
+                    <i class="fa fa-caret-left"></i>
+                    <span>@T("Common.Back")</span>
                 </a>    
                 <input type="submit" name="nextstep" id="nextstep" style="display:none" />
 
