--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/PaymentMethod.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/PaymentMethod.cshtml
@@ -25,11 +25,13 @@
         {
             if (Model.DisplayRewardPoints)
             {
-				<div class="alert alert-info">
-					<label class="checkbox">
-						@Html.EditorFor(model => model.UseRewardPoints)
-						@Html.Raw(string.Format(T("Checkout.UseRewardPoints").Text, "<strong>" + Model.RewardPointsBalance + "</strong>", "<strong>" + Model.RewardPointsAmount + "</strong>"))
-					</label>
+				<div class="reward-points alert alert-info">
+					<div class="checkbox">
+                        <label class="form-check-label mb-0">
+                            @Html.EditorFor(model => model.UseRewardPoints)
+                            @Html.Raw(string.Format(T("Checkout.UseRewardPoints").Text, "<strong>" + Model.RewardPointsBalance + "</strong>", "<strong>" + Model.RewardPointsAmount + "</strong>"))
+                        </label>
+					</div>
 				</div>
             }
 
@@ -37,20 +39,16 @@
 				<div id="@Model.GetWidgetId"></div>
 			</div>
 
-			<div class="block clearfix">
-				<div class="block-body">
-					<div class="buttons">
-						<a class="btn pull-left" href="@Url.Action("ShippingMethod", "Checkout", new { area = "" })">
-							<i class="fa fa-caret-left"></i>&nbsp;@T("Common.Back")
-						</a>
+            <div class="buttons clearfix mt-3">
+                <a class="btn btn-secondary pull-left" href="@Url.Action("ShippingMethod", "Checkout", new { area = "" })">
+                    <i class="fa fa-caret-left"></i>&nbsp;@T("Common.Back")
+                </a>
 
-						<button id="AmazonPayNextCheckoutStep" type="submit" class="btn btn-warning pull-right payment-method-next-step-button hide">
-							@T("Checkout.NextButton")&nbsp;<i class="fa fa-caret-right"></i>
-						</button>
-					</div>
-				</div>
-			</div>
-
+                <button id="AmazonPayNextCheckoutStep" type="submit" class="btn btn-warning pull-right payment-method-next-step-button hide">
+                    @T("Checkout.NextButton")&nbsp;<i class="fa fa-caret-right"></i>
+                </button>
+            </div>
+			
 			Html.RenderWidget("checkout_payment_method_bottom"); 
 		}
 	</div>
