--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/OrderReviewData.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/OrderReviewData.cshtml
@@ -7,11 +7,11 @@
 }
 
 <div class="order-review-data-box">
-	<div class="row-fluid">
+	<div class="row">
 
 		@if (Model.IsShippable)
         {
-			<div class="amazon-pay-address-widget span12">
+			<div class="amazon-pay-address-widget col-md-6">
 				<div class="block block-bordered">
 					<div class="block-title">
 						<span>@T("Order.ShippingAddress")</span>
@@ -24,7 +24,7 @@
 			</div>
         }
 		
-		<div class="amazon-pay-wallet-widget span12">
+		<div class="amazon-pay-wallet-widget col-md-6">
 			<div class="block block-bordered">
 				<div class="block-title">
 					<span>@T("Order.PaymentMethod")</span>
@@ -53,7 +53,5 @@
         </div>
     }
 </div>
-
-<div class="clear"></div>
 
 @{ Html.RenderPartial("ScriptingReadWidgets", Model); }
