--- a/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
@@ -5,7 +5,7 @@
 
 <div class="media">
 	<span class="pull-left">
-		<img class="media-object img-fluid" src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/branding.png")" alt="PayPal" />
+		<img class="media-object img-fluid pr-2" src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/branding.png")" alt="PayPal" />
 	</span>
 	<div class="media-body">
 		@T("Plugins.Payments.PayPalStandard.Fields.RedirectionTip")
