--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -103,8 +103,8 @@
 <div class="page order-details">
     <div class="clearfix">
         <div class="page-title pull-left">
-            <div class="title">
-                <h1>@T("Order.OrderInformation")</h1>
+            <div class="page-title">
+                <h1 class="font-weight-normal">@T("Order.OrderDetails")</h1>
             </div>
         </div>
 
@@ -430,7 +430,7 @@
                 </div>
 
             </div>
-                        }
+        }
 
         @{ Html.RenderWidget("orderdetails_page_afterproducts"); }
 
