--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
@@ -8,7 +8,7 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1 class="font-weight-400">@T("Account.PasswordRecovery")</h1>
+        <h1>@T("Account.PasswordRecovery")</h1>
     </div>
 
     <div class="page-body">
