--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -9,6 +9,7 @@ $site-bg:                       $gray-lightest !default;
 
 $font-weight-light:             300 !default;
 $font-weight-medium:            600 !default;
+$headings-lg-font-weight:       400 !default;
 
 $header-bg:                     transparent !default;
 $header-color:                  $body-color !default;
@@ -112,6 +113,7 @@ $font-size-h5:                  1rem;
 $font-size-h6:                  $font-size-base;
 $lead-font-size:                1rem;
 $lead-font-weight:              $font-weight-light;
+$small-font-size:               90%;
 
 $display1-size:                 5.5rem;
 $display2-size:                 5rem;
