--- a/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
@@ -19,7 +19,7 @@
 
 <div class="page login-page">
 	<div class="page-title">
-		<h1 class="font-weight-normal">@T("Account.Login.Welcome")</h1>
+		<h1>@T("Account.Login.Welcome")</h1>
 	</div>
 
 	<div class="row mt-4">
